# escrowX-freelancer

./: README.md  package-lock.json
escrow-x-sc-freelancer/: Cargo.toml
escrow-x-sc-freelancer/meta/: Cargo.toml
escrow-x-sc-freelancer/meta/src/: main.rs
escrow-x-sc-freelancer/output/: escrow-x-sc-freelancer.abi.json  escrow-x-sc-freelancer.imports.json  escrow-x-sc-freelancer.mxsc.json  escrow-x-sc-freelancer.wasm
escrow-x-sc-freelancer/scenarios/: escrow_x_sc_freelancer.scen.json
escrow-x-sc-freelancer/src/: escrow_x_sc_freelancer.rs
escrow-x-sc-freelancer/tests/: escrow_x_sc_freelancer_scenario_go_test.rs  escrow_x_sc_freelancer_scenario_rs_test.rs
escrow-x-sc-freelancer/wasm/: Cargo.toml
escrow-x-sc-freelancer/wasm/src/: lib.rs
